# llzk-rs

./: .gitignore  .gitmodules  .lsan.supp  .rustfmt.toml  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
frontends/halo2/: Cargo.toml
frontends/halo2-circuits/: Cargo.toml
frontends/halo2-circuits/src/: fibonacci.rs  lib.rs  lookup.rs  mul.rs
frontends/halo2-circuits/src/fibonacci/: grouped.rs
frontends/halo2-circuits/src/lookup/: two_by_three.rs  two_by_three_fixed.rs  two_by_three_zerosel.rs
frontends/halo2-circuits/src/mul/: fixed_constraint.rs  flipped_constraint.rs  grouped.rs  injection.rs  recursive_groups.rs  ten_plus_io.rs
frontends/halo2-circuits/src/mul/grouped/: deep_callstack.rs  different_bodies.rs  same_body.rs
frontends/halo2-ir/: Cargo.toml
frontends/halo2-ir-base/: Cargo.toml  README.md
frontends/halo2-ir-base/src/: felt.rs  func.rs  lib.rs  temps.rs
frontends/halo2-ir/src/: canon.rs  error.rs  lib.rs  stmt.rs
frontends/halo2-ir/src/expr/: aexpr.rs  bexpr.rs
frontends/halo2-ir/src/stmt/: assert.rs  assume_determ.rs  call.rs  constraint.rs  post_cond.rs  seq.rs  test.rs
frontends/halo2-ir/src/stmt/test/: helpers.rs
frontends/halo2-lowering/: Cargo.toml
frontends/halo2-lowering/src/: error.rs  lib.rs  lowerable.rs
frontends/halo2-midnight/: Cargo.toml  README.md
frontends/halo2-midnight/src/: circuit.rs  lib.rs  macros.rs  plonk.rs  synthesizer.rs
frontends/halo2-midnight/src/circuit/: groups.rs
frontends/halo2/src/: adaptors.rs  arena.rs  driver.rs  error.rs  expressions.rs  gates.rs  info_traits.rs  io.rs  ir.rs  lib.rs  lookups.rs  resolvers.rs  table.rs  temps.rs  utils.rs  value.rs
frontends/halo2/src/backend/: codegen.rs  events.rs  func.rs  llzk.rs  lowering.rs  mod.rs  resolvers.rs
frontends/halo2/src/backend/codegen/: lookup.rs  queue.rs  strats.rs
frontends/halo2/src/backend/llzk/: codegen.rs  counter.rs  error.rs  extras.rs  factory.rs  lowering.rs  params.rs  state.rs
frontends/halo2/src/backend/lowering/: lowerable.rs
frontends/halo2/src/backend/picus/: expr.rs  felt.rs  inner.rs  lowering.rs  mod.rs  output.rs  params.rs  stmt.rs  utils.rs  vars.rs
frontends/halo2/src/expressions/: constant_folding.rs  rewriter.rs  traits.rs  utils.rs
frontends/halo2/src/halo2/: axiom.rs  midnight.rs  mod.rs  pse.rs  pse_v1.rs  scroll.rs  zcash.rs
frontends/halo2/src/ir/: canon.rs  ctx.rs  equivalency.rs  expr.rs  generate.rs  groups.rs  mod.rs  opt.rs  printer.rs  stmt.rs
frontends/halo2/src/ir/expr/: aexpr.rs  bexpr.rs
frontends/halo2/src/ir/generate/: free_cells.rs  groups.rs  lookup.rs  patterns.rs
frontends/halo2/src/ir/groups/: bounds.rs  callsite.rs
frontends/halo2/src/ir/lift/: mod.rs  (+3 more)
frontends/halo2/src/lookups/: callbacks.rs  table.rs
frontends/halo2/src/support/: mod.rs  regions.rs  roles.rs
frontends/halo2/src/synthesis/: constraint.rs  groups.rs  matrix.rs  mod.rs  regions.rs
frontends/halo2/src/test/: mod.rs
frontends/halo2/tests/: fibonacci2_test.rs  fibonacci_test.rs  fibonacci_tests.rs  grouped_muls2_test.rs  grouped_muls3_test.rs  grouped_muls4_test.rs  grouped_muls_test.rs  lookup_2x3_fixed.rs  lookup_2x3_test.rs  lookup_2x3_zerosel_test.rs  lookup_test.rs  lookup_tests.rs  mul_flipped_constraint_test.rs  mul_injection_test.rs  mul_test.rs  mul_test_folded.rs  mul_tests.rs  mul_with_fixed_constraint_test.rs  mul_with_rewriter_test.rs  recursive_groups_test.rs  ten_plus_io_test.rs
frontends/halo2/tests/common/: llzk.rs  mod.rs  picus.rs
llzk/: Cargo.toml
llzk-sys/: Cargo.toml  README.md  build.rs  wrapper.h
llzk-sys/build-support/: Cargo.toml  README.md
llzk-sys/build-support/src/: compile_commands.rs  config.rs  config_traits.rs  default.rs  lib.rs  llzk.rs  mlir.rs  wrap_static_fns.rs
llzk-sys/build-support/src/config/: bindgen.rs  cc.rs  cmake.rs
llzk-sys/build-support/src/config_traits/: bindgen.rs  cc.rs  cmake.rs
llzk-sys/src/: lib.rs
llzk-sys/src/build_support/: compile_commands.rs  config_traits.rs  default.rs  llzk.rs  mlir.rs  mod.rs  wrap_static_fns.rs
llzk-sys/src/sanity_tests/: builder.rs  constants.rs  init_dialects.rs  mod.rs  transforms.rs  typing.rs  validators.rs
llzk-sys/src/sanity_tests/dialect/: array.rs  boolean.rs  cast.rs  felt.rs  function.rs  global.rs  include.rs  llzk.rs  mod.rs  pod.rs  polymorphic.rs  string.rs  struct.rs  undef.rs
llzk/examples/: division.rs
llzk/src/: attributes.rs  builder.rs  context.rs  diagnostics.rs  error.rs  lib.rs  macros.rs  map_operands.rs  operation.rs  passes.rs  prelude.rs  symbol_ref.rs  test.rs  utils.rs  value_ext.rs  value_range.rs
llzk/src/dialect/: array.rs  mod.rs
llzk/src/dialect/array/: mod.rs  ops.rs  tests.rs  type.rs
llzk/src/dialect/bool/: attrs.rs  mod.rs  ops.rs
llzk/src/dialect/cast/: mod.rs
llzk/src/dialect/constrain/: mod.rs
llzk/src/dialect/felt/: attrs.rs  mod.rs  ops.rs  type.rs
llzk/src/dialect/function/: mod.rs  ops.rs
llzk/src/dialect/global/: mod.rs
llzk/src/dialect/llzk/: attrs.rs  mod.rs
llzk/src/dialect/pod/: attrs.rs  mod.rs  ops.rs  type.rs
llzk/src/dialect/poly/: mod.rs  ops.rs  type.rs
llzk/src/dialect/struct/: helpers.rs  mod.rs  ops.rs  type.rs
llzk/src/dialect/undef/: mod.rs
llzk/tests/: array_dialect.rs  bool_dialect.rs  felt_dialect.rs  function_dialect.rs  llzk_dialect.rs  pod_dialect.rs  poly_dialect.rs  struct_dialect.rs  undef_dialect.rs
llzk/tests/common/: mod.rs
llzk/tests/expected/: call_op_self_value_of_compute.mlir  empty_struct.mlir  empty_struct_with_one_param.mlir  empty_struct_with_pub_inputs.mlir  signal_struct.mlir
mlir-18-sys/: Cargo.toml  LICENSE-MIT  README.md  build.rs  wrapper.h
mlir-18-sys/src/: lib.rs
picus/: Cargo.toml
picus/benches/: vars_benchmark.rs
picus/src/: display.rs  felt.rs  ident.rs  lib.rs  module.rs  opt.rs  program.rs  vars.rs
picus/src/expr/: impls.rs  mod.rs  traits.rs  util.rs
picus/src/expr/impls/: binary.rs
picus/src/opt/passes/: consolidate_var_names.rs  ensure_max_size.rs  fold.rs  mod.rs  replace_consts.rs
picus/src/stmt/: display.rs  impls.rs  mod.rs  traits.rs
(+118 files in other folders)
