[package]
name = "picus"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = { version = "0.4", optional = true }
anyhow = "1"
regex = "1.11"
log = "0.4"
disjoint = "0.8"
lazy_static = "1.5"

[features]
default = []
bigint-felt = ["dep:num-bigint"]

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "vars_benchmark"
harness = false
