[package]
name = "halo2-test-circuits"
version = "0.1.0"
edition = "2024"

[dependencies.midnight-proofs]
git = "https://github.com/Veridise/midnight-zk.git"
default-features = false
features = [
    "bits",
    "cost-estimator",
    "circuit-params",
    "committed-instances",
    "region-groups"
]

[dependencies]
ff = {workspace = true}
anyhow = "1"
