[package]
name = "haloumi-ir-base"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Types used by the IR and by some modules that the IR depends on."
keywords = ["halo2", "llzk", "haloumi"]
categories = ["compilers"]
repository = "https://github.com/Veridise/haloumi"
license = "Apache-2.0"

[dependencies]
ff = { workspace = true }
haloumi-core = {version = "0.1.0"}
internment = "0.8.6"
num-bigint = "0.4"
log = "0.4"
eqv = "0.1"

[dev-dependencies]
simplelog = {version = "0.12", features = ["test"] }
similar-asserts = "1.7"
quickcheck = "1"
quickcheck_macros = "1"
