[package]
name = "haloumi-ir"
version = "0.1.0"
edition = "2024"

[dependencies]
ff = { workspace = true }
haloumi-core = {version = "0.1.0"}
haloumi-lowering = {path = "../halo2-lowering", version = "0.1.0"}
haloumi-ir-base = {path = "../halo2-ir-base", version = "0.1.0"}
log = "0.4"
thiserror = "2"
eqv = "0.1"
