[package]
name = "halo2-midnight-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
halo2-frontend-core = { version = "0", package = "haloumi-core" }
ff = {workspace = true }

[dependencies.midnight-proofs]
git = "https://github.com/Veridise/midnight-zk.git"
default-features = false
features = [
    "circuit-params",
    "committed-instances",
    "region-groups"
]
