[package]
name = "halo2-llzk-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
melior = { workspace = true }
mlir-sys = { workspace = true }
llzk-sys = { path = "../../llzk-sys/", version = "0.1.0"}
llzk = { path = "../../llzk/", version = "0.1.0"}
anyhow = "^1"
group = "0.13"
ff = "0.13"
num-bigint = "0.4"
rand = "0.8.5"
subtle = "2.6.1"
lazy_static = "1.5"
serde = { version = "1.0", features = ["derive"] }

# Different halo2 implementations
[dependencies.axiom_halo2_proofs]
git = "https://github.com/axiom-crypto/halo2.git"
package = "halo2-axiom"
optional = true

[dependencies.midnight_halo2_proofs]
git = "https://github.com/midnightntwrk/halo2.git"
package = "halo2_proofs"
optional = true
rev = "92d9356"
default-features = false
features = [
    "bits",
    "cost-estimator",
    "circuit-params",
    "committed-instances",
]

[dependencies.pse_halo2_proofs]
git = "https://github.com/privacy-scaling-explorations/halo2.git"
package = "halo2_proofs"
optional = true

[dependencies.pse_v1_halo2_proofs]
git = "https://github.com/privacy-scaling-explorations/halo2.git"
tag = "v2022_08_19"
package = "halo2_proofs"
optional = true

[dependencies.scroll_halo2_proofs]
git = "https://github.com/scroll-tech/halo2.git"
package = "halo2_proofs"
optional = true

[dependencies.zcash_halo2_proofs]
git = "https://github.com/zcash/halo2.git"
package = "halo2_proofs"
optional = true

[dependencies.halo2curves_021]
package = "halo2curves"
git = 'https://github.com/privacy-scaling-explorations/halo2curves'
tag = "0.2.1"
optional = true

[dependencies.halo2curves_070]
package = "halo2curves"
version = "0.7.0"
default-features = false 
optional = true

[features]
default = ["midnight"]
axiom = ["axiom_halo2_proofs", "phase-tracking", "halo2curves_021"]
midnight = ["midnight_halo2_proofs", "annotate-column", "get-challenge", "halo2curves_070"]
pse = ["pse_halo2_proofs", "phase-tracking", "halo2curves_021"]
pse-v1 = ["pse_v1_halo2_proofs", "halo2curves_021"]
scroll = ["scroll_halo2_proofs", "phase-tracking", "halo2curves_021"]
zcash = ["zcash_halo2_proofs", "halo2curves_021"]

# These features encapsulate behavior where the different implementations deviate.
# Each represents a particular change or feature and different libraries activate them
# as necessary. They are not meant to be enabled by the end user.
phase-tracking = []
annotate-column = []
get-challenge = []
