[package]
name = "halo2-llzk-frontend"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
simplelog = {version = "0.12", features = ["test"] }
similar-asserts = "1.7"
quickcheck = "1"
quickcheck_macros = "1"
rstest = "0.26"
group = "0.13"
mlir-testutils = {version = "0.1.0", features = ["similar-asserts"]}
halo2-test-circuits = { path = "../halo2-circuits" }
halo2-midnight-integration = { path = "../halo2-midnight" }
paste = "1"

[dependencies]
melior = { workspace = true, optional = true }
mlir-sys = { workspace = true, optional = true }
llzk-sys = { path = "../../llzk-sys/", version = "0.1.0", optional = true }
llzk = { path = "../../llzk/", version = "0.1.0", features =["bigint"], optional = true}
picus = { path = "../../picus", version = "0.1.0", features=["bigint-felt"], optional = true }
halo2-frontend-core = { version = "0", package = "haloumi-core" }#, path = "../../../haloumi/core/" }
haloumi-ir = {  version = "0" }#, path = "../../../haloumi/ir/" }
haloumi-lowering = { version = "0" }#, path = "../../../haloumi/lowering/"}
anyhow = "^1"
ff = {workspace = true }
num-bigint = "0.4"
log = "0.4"
disjoint = "0.8"
paste = "1.0"
bit-set = "0.8"
eqv = "0.1"
thiserror = "2"
# halo2_proofs = {version = "*", default-features = false, features = [ "cost-estimator", "circuit-params", "committed-instances"]}

# Different halo2 implementations
# [dependencies.axiom_halo2_proofs]
# git = "https://github.com/axiom-crypto/halo2.git"
# package = "halo2-axiom"
# optional = true

[dev-dependencies.halo2_proofs]
# git = "https://github.com/midnightntwrk/halo2.git"
# git = "https://github.com/Veridise/halo2-midnight.git"
git = "https://github.com/Veridise/midnight-zk.git"
# optional = true 
# rev = "92d9356"
# rev = "53c2d2d3"
default-features = false
package = "midnight-proofs"
features = [
    "circuit-params",
    "committed-instances",
    "region-groups"
]

# [dependencies.pse_halo2_proofs]
# git = "https://github.com/privacy-scaling-explorations/halo2.git"
# package = "halo2_proofs"
# optional = true
#
# [dependencies.pse_v1_halo2_proofs]
# git = "https://github.com/privacy-scaling-explorations/halo2.git"
# tag = "v2022_08_19"
# package = "halo2_proofs"
# optional = true
#
# [dependencies.scroll_halo2_proofs]
# git = "https://github.com/scroll-tech/halo2.git"
# package = "halo2_proofs"
# optional = true
#
# [dependencies.zcash_halo2_proofs]
# git = "https://github.com/zcash/halo2.git"
# package = "halo2_proofs"
# optional = true
#
# [dependencies.halo2curves_021]
# package = "halo2curves"
# git = 'https://github.com/privacy-scaling-explorations/halo2curves'
# tag = "0.2.1"
# optional = true
#
[dev-dependencies.halo2curves]
package = "halo2curves"
version = "0.7.0"
default-features = false 
# optional = true

[features]
default = ["llzk-backend", "picus-backend"]

llzk-backend = ["dep:mlir-sys", "dep:melior", "dep:llzk-sys", "dep:llzk"]
picus-backend = ["dep:picus"]
