[package]
name = "llzk-sys-build-support"
version = "0.1.0"
edition = "2024"
keywords = ["llzk", "mlir"]
categories = ["development-tools::build-utils"]
description = "Helpers for building llzk-sys."
repository = "https://github.com/Veridise/llzk-rs"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
glob = "0.3.2"
anyhow = "1.0.98"
cc = "^1.1"
tempfile = "3.20"

[dev-dependencies]
tempdir = "0.3"
